--- a/index.html
+++ b/index.html
@@ -72,10 +72,209 @@
         
         <div class="swiper-pagination"></div>
     </section>
-    <!-- Movies-->
+    <!-- Movies -->
     <section class="movies" id="movies">
         <h2 class="heading">Opening This Week</h2>
+        <!-- Movies container -->
+        <div class="movies-container">
+            <!-- Box 1 --> 
+            <div class="box">
+                <div class="box-img">
+                    <img src="./img/m1.jpg" alt="">
+                </div>
+                <h3>Venom</h3>
+                <span>120 min | Action</span>
+            </div>
+            <!-- Box 2 --> 
+            <div class="box">
+                <div class="box-img">
+                    <img src="./img/m2.jpg" alt="">
+                </div>
+                <h3>Dunkerk</h3>
+                <span>120 min | Adventure</span>
+            </div>
+            <!-- Box 3 --> 
+            <div class="box">
+                <div class="box-img">
+                    <img src="./img/m3.jpg" alt="">
+                </div>
+                <h3>Batman Vs Superman</h3>
+                <span>120 min | Thriller</span>
+            </div>
+            <!-- Box 4 --> 
+            <div class="box">
+                <div class="box-img">
+                    <img src="./img/m4.jpg" alt="">
+                </div>
+                <h3>John Wick 2</h3>
+                <span>120 min | Adventure</span>
+            </div>
+            <!-- Box 5 --> 
+            <div class="box">
+                <div class="box-img">
+                    <img src="./img/m5.jpg" alt="">
+                </div>
+                <h3>Aquaman</h3>
+                <span>120 min | Action</span>
+            </div>
+            <!-- Box 6 --> 
+            <div class="box">
+                <div class="box-img">
+                    <img src="./img/m6.jpg" alt="">
+                </div>
+                <h3>Black Panther</h3>
+                <span>120 min | Thriller</span>
+            </div>
+            <!-- Box 7 --> 
+            <div class="box">
+                <div class="box-img">
+                    <img src="./img/m7.jpg" alt="">
+                </div>
+                <h3>Thor</h3>
+                <span>120 min | Adventure</span>
+            </div>
+            <!-- Box 8 --> 
+            <div class="box">
+                <div class="box-img">
+                    <img src="./img/m8.png" alt="">
+                </div>
+                <h3>Bumblebee</h3>
+                <span>120 min | Thriller</span>
+            </div>
+            <!-- Box 9 --> 
+            <div class="box">
+                <div class="box-img">
+                    <img src="./img/m9.jpg" alt="">
+                </div>
+                <h3>Mortal Engines</h3>
+                <span>120 min | Action</span>
+            </div>
+            <!-- Box 10 --> 
+            <div class="box">
+                <div class="box-img">
+                    <img src="./img/m10.jpg" alt="">
+                </div>
+                <h3>UnderWorld Blood Wars</h3>
+                <span>120 min | Action</span>
+            </div>
+        </div>          
     </section>
+    <!-- Coming-->
+    <section class="coming" id="coming">
+        <h2 class="heading">Coming Soon</h2>
+        <!-- Coming Container -->
+        <div class="coming-container swiper">
+            <div class="swiper-wrapper">
+                <!-- Box 1 --> 
+            <div class="swiper-slide box">
+                <div class="box-img">
+                    <img src="./img/coming1.jpg" alt="">
+                </div>
+                <h3>Johny English</h3>
+                <span>120 min | Action</span>
+            </div>
+            <!-- Box 2 --> 
+            <div class="swiper-slide box">
+                <div class="box-img">
+                    <img src="./img/coming2.jpg" alt="">
+                </div>
+                <h3>Warcraft</h3>
+                <span>120 min | Adventure</span>
+            </div>
+            <!-- Box 3 --> 
+            <div class="swiper-slide box">
+                <div class="box-img">
+                    <img src="./img/coming3.jpg" alt="">
+                </div>
+                <h3>Rampage</h3>
+                <span>120 min | Thriller</span>
+            </div>
+            <!-- Box 4 --> 
+            <div class="swiper-slide box">
+                <div class="box-img">
+                    <img src="./img/coming4.jpg" alt="">
+                </div>
+                <h3>Iron Lady</h3>
+                <span>120 min | Adventure</span>
+            </div>
+            <!-- Box 5 --> 
+            <div class="swiper-slide box">
+                <div class="box-img">
+                    <img src="./img/coming5.jpg" alt="">
+                </div>
+                <h3>Justice League</h3>
+                <span>120 min | Action</span>
+            </div>
+            <!-- Box 6 --> 
+            <div class="swiper-slide box">
+                <div class="box-img">
+                    <img src="./img/coming6.jpeg" alt="">
+                </div>
+                <h3>Doctor Strange</h3>
+                <span>120 min | Thriller</span>
+            </div>
+            <!-- Box 7 --> 
+            <div class="swiper-slide box">
+                <div class="box-img">
+                    <img src="./img/coming7.jpg" alt="">
+                </div>
+                <h3>Captain Marvel</h3>
+                <span>120 min | Adventure</span>
+            </div>
+            <!-- Box 8 --> 
+            <div class="swiper-slide box">
+                <div class="box-img">
+                    <img src="./img/coming8.jpg" alt="">
+                </div>
+                <h3>Black Widow</h3>
+                <span>120 min | Thriller</span>
+            </div>
+            <!-- Box 9 --> 
+            <div class="swiper-slide box">
+                <div class="box-img">
+                    <img src="./img/coming9.jpg" alt="">
+                </div>
+                <h3>Antman</h3>
+                <span>120 min | Action</span>
+            </div>
+            <!-- Box 10 --> 
+            <div class="swiper-slide box">
+                <div class="box-img">
+                    <img src="./img/coming10.jpg" alt="">
+                </div>
+                <h3>Guardian of the Galaxy</h3>
+                <span>120 min | Action</span>
+            </div>
+            </div>
+        </div>
+    </section>
+    <!-- Newsletter -->
+    <section class="newsletter" id="newsletter">
+        <h2>Subscribe To Get <br> Newsletter</h2>
+        <form action="">
+            <input type="email" class="email" placeholder="Enter Email..." required>
+            <input type="submit" value="Subscribe" class="btn">
+        </form>
+    </section>
+    <!-- Footer -->
+    <section class="footer">
+        <a href="#" class="logo">
+            <i class='bx bx-movie-play'></i> StayWatch
+        </a>
+        <div class="social">
+            <a href="#"><i class='bx bxl-facebook-circle'></i></a>
+            <a href="#"><i class='bx bxl-twitter'></i></i></a>
+            <a href="#"><i class='bx bxl-instagram-alt' ></i></i></a>
+            <a href="#"><i class='bx bxl-linkedin-square' ></i></i></a>
+        </div>
+    </section>
+    <!-- Copyright -->
+    <div class="copyright">
+        <p>&#169; StayWatch All Right Reserved</p>
+    </div>
+
+
+
 
   <!-- Initialize Swiper -->
   <script type="module" src="main.js">
